# backend-i

backend-i/: Dockerfile  compose.yaml  hello.py
backend-i/session_2/: pyproject.toml
backend-i/session_7/: pyproject.toml
backend-i/session_8/: pyproject.toml
backend-i/session_9/: pyproject.toml
finalproject/: Dockerfile  compose.yaml  db.sqlite3  makefile  pyproject.toml
finalproject/djproject/: settings.py  urls.py
finalproject/spotify/: admin.py  forms.py  models.py  (+2 more)
session_11/: pyproject.toml
session_12/: Dockerfile  README.md  compose.yaml  pyproject.toml
session_13/: Dockerfile  compose.yaml  pyproject.toml
session_13/src/session_13/: main.py  models.py
session_14&15/: db.sqlite3  makefile
spotifyapp/: Dockerfile  Makefile  README.md  compose.yaml  conftest.py  db.sqlite3  pyproject.toml  pytest.ini
spotifyapp/spotify/: db.sqlite3  makefile  settings.py  summary.json
spotifyapp/spotify/spotify/: settings.py  urls.py
spotifyapp/spotify/stats/: admin.py  extract.py  forms.py  models.py  urls.py  views.py
spotifyapp/spotify/stats/migrations/: 0001_initial.py  0002_alter_uploadedfile_file.py  0003_alter_uploadedfile_file.py
spotifyapp/spotify/stats/templates/: home.html  signup.html  summary.html  upload.html  upload_success.html
spotifyapp/stats/: admin.py  forms.py  models.py  urls.py  views.py
spotifyapp/stats/migrations/: 0004_alter_uploadedfile_user.py  0005_alter_uploadedfile_options_alter_uploadedfile_table.py  0006_alter_uploadedfile_options_alter_uploadedfile_table.py  0007_generatedhtml.py  0008_generatedjson_delete_generatedhtml.py
spotifyapp/stats/templates/: signup.html  summary.html  upload.html  upload_success.html
spotifyapp/tests/: conftest.py  test_app.py
(+44 files in other folders)
