[project]
name = "session-13"
version = "0.1.0"
description = ""
authors = [
    {name = "Goncas777",email = "gavieira2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "postgres (>=4.0,<5.0)"
]

[tool.poetry]
packages = [{include = "session_13", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
