[project]
name = "spotifyapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Goncas777",email = "gavieira2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-crispy-forms (>=2.3,<3.0)"
]

[tool.poetry]
packages = [{include = "spotifyapp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
