[project]
name = "spotifyapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Goncas777",email = "gavieira2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"

]

[tool.poetry]
packages = [{include = "spotify"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
